Custom for Montano

--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -1,5 +1,5 @@
 ---
-title: 'About | Code Stitch Web Designs'
+title: 'About | Montano Plumbing & Contracting LTD.'
 description: 'Meta description for the page'
 preloadImg: '/assets/images/cabinets2.jpg'
 permalink: 'about/'
@@ -19,57 +19,75 @@ eleventyNavigation:
     <!--                    LANDING                   -->
     <!-- ============================================ -->
 
-    <section id="int-hero">
-        <h1 id="home-h">About Us</h1>
-        <picture>
-            <source media="(max-width: 600px)" srcset="/assets/images/cabinets2-m.jpg">
-            <source media="(min-width: 601px)" srcset="/assets/images/cabinets2.jpg">
-            <img aria-hidden="true" decoding="async" src="/assets/images/cabinets2.jpg" alt="kitchen cabinets" loading="eager" width="2500" height="1667">
-        </picture>
+<!-- ============================================ -->
+<!--                   Banner                     -->
+<!-- ============================================ -->
 
-    </section>
+<div id="banner-1106-1112">
+    <div class="cs-container">
+        <span class="cs-int-title">About Us</span>
+        <div class="cs-breadcrumbs">
+            <a href="" class="cs-link">Home</a>
+            <a href="" class="cs-link cs-active">About Us</a>
+        </div>
+    </div>
+    <!--Background Image-->
+    <picture class="cs-background">
+        <!--Mobile Image-->
+        <source media="(max-width: 600px)" srcset="/assets/images/banner2.jpg">
+        <!--Tablet and above Image-->
+        <source media="(min-width: 601px)" srcset="/assets/images/banner2.jpg">
+        <img decoding="async" src="/assets/images/banner2.jpg" alt="mechanic" width="1280" height="568" aria-hidden="true">
+    </picture>
+</div>
 
-    <!-- ============================================ -->
-    <!--                 Side By Side                 -->
-    <!-- ============================================ -->
+<!-- ============================================ -->
+<!--                Side By Side                  -->
+<!-- ============================================ -->
 
-    <section id="sbs">
-        <div class="cs-container">
-            <!-- Left Image Section -->
-            <div class="cs-left">
-                <picture class="cs-picture cs-picture1">
-                    <source media="(max-width: 600px)" srcset="/assets/images/cabinets2-m.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/cabinets2.jpg">
-                    <img aria-hidden="true" decoding="async" src="/assets/images/cabinets2.jpg" alt="cabinets" loading="lazy" width="400" height="563">
-                </picture>
-                <picture class="cs-picture cs-picture2">
-                    <source media="(max-width: 600px)" srcset="/assets/images/construction-m.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/construction.jpg">
-                    <img aria-hidden="true" decoding="async" src="/assets/images/construction.jpg" alt="house" loading="lazy" width="400" height="563">
-                </picture>
-            </div>
-            <!-- Right Content Section-->
-            <div class="cs-right">
-                <span class="cs-topper">About Us</span>
-                <h2 class="cs-title">About Company Title</h2>
-                <p class="cs-text">
-                    In consequat tincidunt turpis sit amet imperdiet. Praesent Class officelan nonatoureanor mauris laoreet, iaculis libero quis. Curabitur et tempus eri consequat tincidunt turpis sit amet imperdiet. Praesent nonatourean olei aptent taciti sociosqu ad litora torquent per.
-                </p>
-                <p class="cs-text">
-                    In consequat tincidunt turpis sit amet imperdiet. Praesent Class officelan nonatoureanor mauris laoreet, iaculis libero quis. Curabitur et tempus eri consequat tincidunt turpis sit amet imperdiet. Praesent nonatourean olei aptent taciti sociosqu ad litora torquent per.
-                </p>
-                <div class="cs-flex-group">
-                    <p class="cs-flex-p">
-                        In consequat tincidunt turpis sit amet imperdiet. Praesent Classei consequat tincidunt turpis sit amet imperdiet for mind.
-                    </p>
-                    <span class="cs-name">Justin Time</span>
-                    <span class="cs-job">CEO-Founder</span>
-                    <img class="cs-quote-icon" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/quote-white.svg" alt="gavel" width="136" height="77">
+<section id="sbs-1095-1112">
+    <div class="cs-container">
+        <div class="cs-image-group">
+            <!--Top left image-->
+            <picture class="cs-picture">
+                <!--Mobile Image-->
+                <source media="(max-width: 600px)" srcset="/assets/images/about.jpg">
+                <!--Tablet and above Image-->
+                <source media="(min-width: 601px)" srcset="/assets/images/about.jpg">
+                <img loading="lazy" decoding="async" src="/assets/images/about.jpg" alt="mechanic" width="542" height="608">
+            </picture>
+            <!--Eclipses-->
+            <!-- <img class="cs-graphic" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/eclipses.svg" alt="profile" width="184" height="184" aria-hidden="true"> -->
+            <!--Stripe background-->
+            <img class="cs-stripes" loading="lazy" decoding="async" src="/assets/images/stripe.svg" alt="stripes" width="522" height="608" aria-hidden="true">
+        </div>
+        <div class="cs-content">
+            <span class="cs-topper">PLUMBING SERVICE SINCE 2020 </span>
+            <h2 class="cs-title">Providing expert plumbing services for homes and businesses</h2>
+            <p class="cs-text">
+                Montano Plumbing & Contracting LTD specializes in plumbing, gasfitting, and renovations in Edmonton and surrounding areas. Our dedicated team delivers quality service and exceptional craftsmanship for all your home improvement needs. We repair, service, and install residential plumbing fixtures:             </p>
+            <ul class="cs-list">
+                <li class="cs-li">Hot water tank, Humidifier, Furnace</li>
+                <li class="cs-li">Garage heater, Water Softener</li>
+                <li class="cs-li">Sump pump, Shower, Faucet and toilet</li>
+                <li class="cs-li">Basement rough in, Washroom renovation</li>
+                <li class="cs-li">Water softener, Build decks & fence, Drain cleaning and Kitchen renovation</li>
+            </ul>
+            <div class="cs-info">
+                <img class="cs-icon" loading="lazy" decoding="async" src="/assets/images/blogpost1modified.png" alt="profile" width="52" height="52">
+                <div class="cs-flex">
+                    <span class="cs-name">Raymond Montano</span>
+                    <span class="cs-desc">CEO-Founder of Montano Plumbing and Contracting LTD.</span>
                 </div>
-                <a href="/projects" class="cs-button-solid">Our Projects</a>
             </div>
         </div>
-    </section>
+    </div>
+</section>
+            
+
+  
+
+                                
 
     {% include 'components/cta.html' %}
 
