--- a/src/content/pages/project-one.html
+++ b/src/content/pages/project-one.html
@@ -1,12 +1,12 @@
 ---
-title: 'Project One | Code Stitch Web Designs'
+<!-- title: 'Project One | Code Stitch Web Designs'
 description: 'Meta description for the page'
 preloadImg: '/assets/images/cabinets2.jpg'
 permalink: 'project-one/'
 eleventyNavigation:
     key: Project One
     order: 3100
-    parent: Projects
+    parent: Projects -->
 ---
 
 {% extends "layouts/base.html" %}
