--- a/src/content/pages/project-two.html
+++ b/src/content/pages/project-two.html
@@ -1,12 +1,12 @@
 ---
-title: 'Project Two | Code Stitch Web Designs'
+<!-- title: 'Project Two | Code Stitch Web Designs'
 description: 'Meta description for the page'
 preloadImg: '/assets/images/cabinets2.jpg'
 permalink: 'project-two/'
 eleventyNavigation:
     key: Project Two
     order: 3200
-    parent: Projects
+    parent: Projects -->
 ---
 
 {% extends "layouts/base.html" %}
