--- a/src/content/pages/reviews.html
+++ b/src/content/pages/reviews.html
@@ -2,10 +2,9 @@
 title: 'Reviews | Code Stitch Web Designs'
 description: 'Meta description for the page'
 preloadImg: '/assets/images/cabinets2.jpg'
-permalink: 'reviews/'
+permalink: 
 eleventyNavigation:
-    key: Reviews
-    order: 400
+   
 ---
 
 {% extends "layouts/base.html" %}
