--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -76,29 +76,29 @@ eleventyNavigation:
         <div class="cs-info-group">
             <div class="cs-info">
                 <span class="cs-topper">Location</span>
-                <span class="cs-detail">234-244 Stockwell Rd, 4th Floor<br>Brixton, SW9 9SP</span>
+                <span class="cs-detail">Edmonton, Alberta Canada</span>
             </div>
             <div class="cs-info">
                 <span class="cs-topper">Working Hours</span>
-                <span class="cs-detail">Monday - Saturday: 10:00 - 20:00</span>
+                <span class="cs-detail">Monday - Saturday: 8:00am - 6:00pm</span>
                 <span class="cs-detail">Sunday: Closed</span>
             </div>
             <div class="cs-info">
                 <span class="cs-topper">Contact</span>
-                <span class="cs-detail">M: +1 780-708-5345</span>
-                <span class="cs-detail">E: yeg.mpc@gmail.com</span>
+                <span class="cs-detail">Mobile: +1 780-708-5345</span>
+                <span class="cs-detail">E-mail: yeg.mpc@gmail.com</span>
             </div>
         </div>
     </div>
 
     <div class="cs-picture-group">
         <!--Replace with your iframe for your google business profile-->
-        <iframe class="cs-iframe" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d609816.8920384396!2d-113.3602913!3d53.3415156!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6988ef8116c31817%3A0x3e9a65105016fe79!2sMontano%20Plumbing%20%26%20Contracting%20Ltd.!5e0!3m2!1sen!2sph!4v1721831575812!5m2!1sen!2sphhttps://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d172153.33373691145!2d-122.33979794999999!3d47.608715!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5490102c93e83355%3A0x102565466944d59a!2sSeattle%2C%20WA!5e0!3m2!1sen!2sus!4v1717096613140!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe class="cs-iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d303586.12299794616!2d-113.82305642359843!3d53.526225393386234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x53a0224580deff23%3A0x411fa00c4af6155d!2sEdmonton%2C%20AB%2C%20Canada!5e0!3m2!1sen!2sph!4v1721895974333!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
         <!--All three graphics use the same src, which is transformed in the CSS. If you want to replace the graphic with another one, simply replace all the src's with the same URL and watch the magic happen!-->
-        <img class="cs-graphic cs-top cs-light" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Graphics/gym-hero-shape-top-light.svg" alt="graphic" height="161" width="1920" loading="lazy" decoding="async" >
-        <img class="cs-graphic cs-left cs-light" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Graphics/gym-hero-shape-top-light.svg" alt="graphic" height="161" width="1920" loading="lazy" decoding="async" >
-        <img class="cs-graphic cs-bottom cs-light" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Graphics/gym-hero-shape-top-light.svg" alt="graphic" height="161" width="1920" loading="lazy" decoding="async" >
+        <img class="cs-graphic cs-top cs-light" src="/assets/images/download.svg" alt="graphic" height="161" width="1920" loading="lazy" decoding="async" >
+        <img class="cs-graphic cs-left cs-light" src="/assets/images/download.svg alt="graphic" height="161" width="1920" loading="lazy" decoding="async" >
+        <img class="cs-graphic cs-bottom cs-light" src="/assets/images/download.svg alt="graphic" height="161" width="1920" loading="lazy" decoding="async" >
 
         <!--This is a dark version. Download the images and change the fill color to match the color of the section background below it-->
         <img class="cs-graphic cs-top cs-dark" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Graphics/gym-hero-shape-top-dark.svg" alt="graphic" height="161" width="1920" loading="lazy" decoding="async" >
