--- a/src/content/pages/services.html
+++ b/src/content/pages/services.html
@@ -50,7 +50,8 @@ eleventyNavigation:
         <div class="cs-content">
             <div class="cs-flex">
                 <span class="cs-topper">Our services</span>
-                <h2 class="cs-title">Grow Your Business with Our New Bold Agency</h2>
+                <h2 class="cs-title">Expert Plumbing,
+                    Gasfitting, and Renovation Solutions&quot;</h2>
             </div>
             <p class="cs-text">
                 Our New Bold Agency by enhancing your plumbing services and attracting more clients with cutting-edge marketing strategies. Our expert team will help you create a strong online presence, ensuring your plumbing business stands out in the competitive market. With tailored solutions and innovative approaches, watch your business thrive like never before.            </p>
@@ -65,7 +66,7 @@ eleventyNavigation:
                         <source media="(min-width: 601px)" srcset="/assets/images/furnace.jpg">
                         <img loading="lazy" decoding="async" src="/assets/images/furnace.jpg" alt="room" width="413" height="420">
                     </picture>
-                    <h3 class="cs-h3">Furnace</h3>
+                    <h3 class="cs-h3">Deck Remodelling</h3>
                     <p class="cs-item-text">
                         We provide some of the finest quality, most reliable, and cost effective services and solutions.
                     </p>
