second commit for revision 07252024

--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@ eleventyNavigation:
             <p class="cs-text">We offer reliable plumbing services 
                 with a commitment to excellence. Our dedicated team
                  ensures customer satisfaction with every job.</p>
-            <a href="" class="cs-button-solid">Schedule Appointment</a>
+            <a href="/contact" class="cs-button-solid">Schedule Appointment</a>
         </div>
     </div>
     <!-- Background Image, there's a background image in the CSS for the parallax effect you'll need to change as well if you swap out our images -->
