update as of 08272024

--- a/src/content/pages/blog.html
+++ b/src/content/pages/blog.html
@@ -37,6 +37,67 @@ eleventyNavigation:
     </picture>
 </div>
 
+<!-- ============================================ -->
+<!--                    Blog                      -->
+<!-- ============================================ -->
+
+<section id="blog-1654">
+    <div class="cs-container">
+        <div class="cs-content">
+            <picture class="cs-picture">
+                <!--Mobile Image-->
+                <source media="(max-width: 600px)" srcset="/assets/images/blog.jpg">
+                <!--Tablet and above Image-->
+                <source media="(min-width: 601px)" srcset="/assets/images/blog.jpg">
+                <img loading="lazy" decoding="async" src="/assets/images/blog.jpg" alt="busines meeting" width="413" height="652" aria-hidden="true">
+            </picture>
+            <div class="cs-text-wrapper">
+                <span class="cs-topper">Our Blog</span>
+                <h2 class="cs-title">Latest News</h2>
+            </div>
+        </div>
+        <div class="cs-posts">
+            <ul class="cs-card-group">
+                <li class="cs-item">
+                    <picture class="cs-image" aria-hidden="true">
+                        <source media="(max-width: 600px)" srcset="/assets/images/blogpost1.jpg">
+                        <source media="(min-width: 601px)" srcset="/assets/images/blogpost1.jpg">
+                        <img loading="lazy" decoding="async" src="/assets/images/blogpost1.jpg" alt="windmill" width="413" height="320">
+                    </picture>
+                    <div class="cs-flex">
+                        <span class="cs-date">29 Oct, 2023</span>
+                        <h3 class="cs-h3">Latest: Montano Plumbing & Contracting LTD is a member of Philippine Business of Society Alberta</h3>
+                        <p class="cs-item-text">
+                            Montano Plumbing & Contracting LTD is now a proud member of the Philippine Business Society of Alberta. This membership reflects our commitment to excellence and community engagement within the Filipino business network.                        </p>
+                        <a href="" class="cs-link">
+                            Get Started
+                            <img class="cs-arrow" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/gold-right-arrow.svg" alt="icon" width="20" height="20" aria-hidden="true">
+                        </a>
+                    </div>
+                </li>
+                <li class="cs-item">
+                    <picture class="cs-image" aria-hidden="true">
+                        <source media="(max-width: 600px)" srcset="/assets/images/blogpost2.jpg">
+                        <source media="(min-width: 601px)" srcset="/assets/images/blogpost2.jpg">
+                        <img loading="lazy" decoding="async" src="/assets/images/blogpost2.jpg" alt="fire hydrant" width="413" height="320">
+                    </picture>
+                    <div class="cs-flex">
+                        <span class="cs-date">8 March, 2024</span>
+                        <h3 class="cs-h3">Get a Free Humidifier with Every Furnace Installation: A Perfect Pair for Ultimate Home Comfort!</h3>
+                        <p class="cs-item-text">
+                            Upgrade your home's comfort and air quality with our special offer: receive a free humidifier with every new furnace installation! Enjoy balanced humidity and cozy warmth all year round, enhancing your living space like never before.                        </p>
+                        <a href="" class="cs-link">
+                            Get Started
+                            <img class="cs-arrow" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/gold-right-arrow.svg" alt="icon" width="20" height="20" aria-hidden="true">
+                        </a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
+</section>
+                                   
+
 
 
 
