--- a/src/content/pages/services.html
+++ b/src/content/pages/services.html
@@ -1,10 +1,10 @@
 ---
-title: 'Contruction & Renovation| Montano Plumbing & Contracting LTD.'
+title: 'Construction & Renovation| Montano Plumbing & Contracting LTD.'
 description: 'Meta description for the page'
 preloadImg: '/assets/images/cabinets2.jpg'
 permalink: 'ContructionRenovation/'
 eleventyNavigation:
-    key: Contruction & Renovation
+    key: Construction & Renovation
     order: 250
 ---
 
