--- a/src/index.html
+++ b/src/index.html
@@ -504,46 +504,40 @@ eleventyNavigation:
 
 
 <!-- ============================================ -->
-<!--                Side By Side                  -->
+<!--                   Steps                      -->
 <!-- ============================================ -->
 
-<section id="sbs-1095-1112">
+<section id="steps-1209">
     <div class="cs-container">
-        <div class="cs-image-group">
-            <!--Top left image-->
-            <picture class="cs-picture">
-                <!--Mobile Image-->
-                <source media="(max-width: 600px)" srcset="/assets/images/about.jpg">
-                <!--Tablet and above Image-->
-                <source media="(min-width: 601px)" srcset="/assets/images/about.jpg">
-                <img loading="lazy" decoding="async" src="/assets/images/about.jpg" alt="mechanic" width="542" height="608">
-            </picture>
-            <!--Eclipses-->
-            <!-- <img class="cs-graphic" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/eclipses.svg" alt="profile" width="184" height="184" aria-hidden="true"> -->
-            <!--Stripe background-->
-            <!-- <img class="cs-stripes" loading="lazy" decoding="async" src="/assets/images/stripe.svg" alt="stripes" width="522" height="608" aria-hidden="true"> -->
-        </div>
         <div class="cs-content">
             <span class="cs-topper"></span>
-            <h2 class="cs-title">Why Choose MPC?</h2> <br><br>
+            <h2 class="cs-title">Why Choose MPC?</h2>
             <p class="cs-text">
-                Montano Plumbing & Contracting LTD is your go-to expert for plumbing, gas fitting, and renovations in Edmonton and the surrounding areas. Our skilled team is committed to delivering top-quality service and exceptional craftsmanship on every project. From repairs to installations, we handle all your residential plumbing needs with precision and care. Choose MPC for reliable, expert service that ensures your home improvement projects are done right the first time.            <!-- <ul class="cs-list">
-                <li class="cs-li">Hot water tank, Humidifier, Furnace</li>
-                <li class="cs-li">Garage heater, Water Softener</li>
-                <li class="cs-li">Sump pump, Shower, Faucet and toilet</li>
-                <li class="cs-li">Basement rough in, Washroom renovation</li>
-                <li class="cs-li">Water softener, Build decks & fence, Drain cleaning and Kitchen renovation</li>
-            </ul> -->
-            <!-- <div class="cs-info">
-                <img class="cs-icon" loading="lazy" decoding="async" src="/assets/images/blogpost1modified.png" alt="profile" width="52" height="52">
-                <div class="cs-flex">
-                    <span class="cs-name">Raymond Montano</span>
-                    <span class="cs-desc">CEO-Founder of Montano Plumbing and Contracting LTD.</span>
-                </div> -->
-            </div>
+            </p>
         </div>
+        <ul class="cs-card-group">
+            <li class="cs-item">
+                <span class="cs-number">01</span>
+                <h3 class="cs-h3"></h3>
+                <p class="cs-item-text">
+                    Montano Plumbing & Contracting LTD is your go-to expert for plumbing, gas fitting, and renovations in Edmonton and the surrounding areas.                 </p>
+            </li>
+            <li class="cs-item">
+                <span class="cs-number">02</span>
+                <h3 class="cs-h3"></h3>
+                <p class="cs-item-text">
+                    Our skilled team is committed to delivering top-quality service and exceptional craftsmanship on every project. From repairs to installations, we handle all your residential plumbing needs with precision and care.                 </p>
+            </li>
+            <li class="cs-item">
+                <span class="cs-number">03</span>
+                <h3 class="cs-h3"></h3>
+                <p class="cs-item-text">
+                    Choose MPC for reliable, expert service that ensures your home improvement projects are done right the first time.                </p>
+            </li>
+        </ul>
     </div>
 </section>
+                                
            
 
 
