--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 title: 'Montano Plumbing & Contracting LTD.'
 description: 'Meta description for the page'
 preloadImg: '/assets/images/landing.jpg'
-permalink: '/'
+permalink: 'index/'
 tags: 'sitemap' # Sitemap will use all pages in content/, due to content.json. As index.html is not included in content/ we need to manually add the sitemap tag to this page (only).
 eleventyNavigation:
   key: Home
