updates as of 08302024

--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -1,8 +1,8 @@
 ---
-title: 'Plumbing & Heating | Montano Plumbing & Contracting LTD.'
-description: 'Meta description for the page'
+title: 'Plumbing & Heating| Montano Plumbing & Contracting LTD.'
+description: 'Your Trusted Partner for Renovations and Plumbing'
 preloadImg: '/assets/images/cabinets2.jpg'
-permalink: 'PlumbingHeating/'
+permalink: 'about/'
 eleventyNavigation:
     key: Plumbing & Heating
     order: 200
@@ -37,7 +37,7 @@ Doing this will complete the overlapping "breaking the container" look.
             <p class="cs-text">
                 Whether for residential or commercial properties.
             </p>
-            <a href="" class="cs-button-solid">Get A Quote</a>
+            <a href="/contact" class="cs-button-solid">Get A Quote</a>
         </div>
        <div></div>
     </div>
@@ -48,6 +48,19 @@ Doing this will complete the overlapping "breaking the container" look.
         <source media="(min-width: 601px)" srcset="/assets/images/plumbingheatinghero.jpg">
         <img decoding="async" src="/assets/images/plumbingheatinghero.jpg" alt="construction" width="2250" height="1500" aria-hidden="true">
     </picture>
+</section>
+<section id="cta-1693">
+    <div class="cs-container">
+        <div class="cs-content">
+            <h2 class="cs-title">We offer financing on any plumbing/heating installation and home renovation
+                projects ranging from $2,000 to $100,000.</h2>
+            <a href="" class="cs-button-solid">Get Financing</a>
+        </div>
+    </div>
+    <div class="cs-wrapper">
+        <img class="cs-graphic cs-graphic-1" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/enterprise-logo.png" alt="logo" height="372" width="372" loading="lazy" decoding="async">
+        <img class="cs-graphic cs-graphic-2" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/enterprise-logo.png" alt="logo" height="372" width="372" loading="lazy" decoding="async">
+    </div>
 </section>
                                 
                                 
@@ -86,10 +99,10 @@ Doing this will complete the overlapping "breaking the container" look.
                 <a  class="cs-link">
                     <picture class="cs-picture">
                         <!--Mobile Image-->
-                        <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/worker5.jpg">
+                        <source media="(max-width: 600px)" srcset="/assets/images/tankless.jpg">
                         <!--Tablet and above Image-->
-                        <source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/worker5.jpg">
-                        <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/worker5.jpg" alt="room" width="413" height="420">
+                        <source media="(min-width: 601px)" srcset="/assets/images/tankless.jpg">
+                        <img loading="lazy" decoding="async" src="/assets/images/tankless.jpg" alt="room" width="413" height="420">
                     </picture>
                     <h3 class="cs-h3">Tankless Water Heater</h3>
                     <p class="cs-item-text">
@@ -101,10 +114,10 @@ Doing this will complete the overlapping "breaking the container" look.
                 <a  class="cs-link">
                     <picture class="cs-picture">
                         <!--Mobile Image-->
-                        <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/containers.jpg">
+                        <source media="(max-width: 600px)" srcset="/assets/images/furnaceforservices.jpg">
                         <!--Tablet and above Image-->
-                        <source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/containers.jpg">
-                        <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/containers.jpg" alt="room" width="413" height="420">
+                        <source media="(min-width: 601px)" srcset="/assets/images/furnaceforservices.jpg">
+                        <img loading="lazy" decoding="async" src="/assets/images/furnaceforservices.jpg" alt="room" width="413" height="420">
                     </picture>
                     <h3 class="cs-h3">Furnace</h3>
                     <p class="cs-item-text">
