--- a/src/content/pages/blog.html
+++ b/src/content/pages/blog.html
@@ -1,6 +1,6 @@
 ---
 title: 'Blog | Montano Plumbing & Contracting LTD.'
-description: 'Meta description for the page'
+description: 'Your Trusted Partner for Renovations and Plumbing'
 preloadImg: '/assets/images/cabinets2.jpg'
 permalink: 'blog/'
 eleventyNavigation:
@@ -66,28 +66,28 @@ eleventyNavigation:
                     </picture>
                     <div class="cs-flex">
                         <span class="cs-date">29 Oct, 2023</span>
-                        <h3 class="cs-h3">Latest: Montano Plumbing & Contracting LTD is a member of Philippine Business of Society Alberta</h3>
+                        <h3 class="cs-h3">Essential Summer Plumbing Maintenance Tips for Homeowners</h3>
                         <p class="cs-item-text">
-                            Montano Plumbing & Contracting LTD is now a proud member of the Philippine Business Society of Alberta. This membership reflects our commitment to excellence and community engagement within the Filipino business network.                        </p>
+                            Discover the top renovation projects that can significantly increase your home’s value this summer. From upgrading your kitchen and bathrooms to enhancing curb appeal with landscaping, explore the best ways to make your home more appealing to potential buyers. Learn which improvements offer the greatest return on investment and get your property market-ready with these smart upgrades.     </p>
                         <a href="" class="cs-link">
-                            Get Started
+                      
                             <img class="cs-arrow" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/gold-right-arrow.svg" alt="icon" width="20" height="20" aria-hidden="true">
                         </a>
                     </div>
                 </li>
                 <li class="cs-item">
                     <picture class="cs-image" aria-hidden="true">
-                        <source media="(max-width: 600px)" srcset="/assets/images/blogpost2.jpg">
-                        <source media="(min-width: 601px)" srcset="/assets/images/blogpost2.jpg">
-                        <img loading="lazy" decoding="async" src="/assets/images/blogpost2.jpg" alt="fire hydrant" width="413" height="320">
+                        <source media="(max-width: 600px)" srcset="/assets/images/gal7.jpg">
+                        <source media="(min-width: 601px)" srcset="/assets/images/gal7.jpg">
+                        <img loading="lazy" decoding="async" src="/assets/images/gal7.jpg" alt="fire hydrant" width="413" height="320">
                     </picture>
                     <div class="cs-flex">
                         <span class="cs-date">8 March, 2024</span>
-                        <h3 class="cs-h3">Get a Free Humidifier with Every Furnace Installation: A Perfect Pair for Ultimate Home Comfort!</h3>
+                        <h3 class="cs-h3">Top Renovation Projects to Boost Your Home’s Value This Summer</h3>
                         <p class="cs-item-text">
-                            Upgrade your home's comfort and air quality with our special offer: receive a free humidifier with every new furnace installation! Enjoy balanced humidity and cozy warmth all year round, enhancing your living space like never before.                        </p>
+                           Explore the most impactful renovation projects to elevate your home’s value this summer. Whether you're thinking of modernizing your kitchen, refreshing your bathrooms, or enhancing outdoor spaces, these upgrades will not only enhance your living experience but also maximize your property's market appeal. Discover which projects offer the best returns and transform your home into a valuable investment.   </p>
                         <a href="" class="cs-link">
-                            Get Started
+                        
                             <img class="cs-arrow" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/gold-right-arrow.svg" alt="icon" width="20" height="20" aria-hidden="true">
                         </a>
                     </div>
