--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -1,6 +1,6 @@
 ---
 title: 'Contact | Montano Plumbing & Contracting LTD.'
-description: 'Meta description for the page'
+description: 'Your Trusted Partner for Renovations and Plumbing'
 preloadImg: '/assets/images/cabinets2.jpg'
 permalink: 'contact/'
 eleventyNavigation:
@@ -129,9 +129,9 @@ eleventyNavigation:
     </div>
     <!--Background Image-->
     <picture class="cs-background">
-        <source media="(max-width: 600px)" srcset="/assets/images/contacthiring.jpg">
-        <source media="(min-width: 601px)" srcset="/assets/images/contacthiring.jpg">
-        <img loading="lazy" decoding="async" src="/assets/images/contacthiring.jpg" alt="people" width="1920" height="486" aria-hidden="true">
+        <source media="(max-width: 600px)" srcset="/assets/images/joinourteam.png">
+        <source media="(min-width: 601px)" srcset="/assets/images/joinourteam.png">
+        <img loading="lazy" decoding="async" src="/assets/images/joinourteam.png" alt="people" width="1920" height="486" aria-hidden="true">
     </picture>
 </section>
                                 
