--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -44,18 +44,18 @@ Doing this will complete the overlapping "breaking the container" look.
 
     <!-- Background Image, there's a background image in the CSS for the parallax effect you'll need to change as well if you swap out our images -->
     <picture class="cs-background">
-        <source media="(max-width: 600px)" srcset="/assets/images/plumbingheatinghero.jpg">
-        <source media="(min-width: 601px)" srcset="/assets/images/plumbingheatinghero.jpg">
-        <img decoding="async" src="/assets/images/plumbingheatinghero.jpg" alt="construction" width="2250" height="1500" aria-hidden="true">
+        <source media="(max-width: 600px)" srcset="/assets/images/plumbheatlanding.jpg">
+        <source media="(min-width: 601px)" srcset="/assets/images/plumbheatlanding.jpg">
+        <img decoding="async" src="/assets/images/plumbheatlanding.jpg" alt="construction" width="2250" height="1500" aria-hidden="true">
     </picture>
 </section>
 <section id="hero-446">
     <ul class="cs-card-group">
               <li class="cs-item">
-                  <span class="cs-number">Finance Available</span>
+                  <span class="cs-number"></span>
                   <span class="cs-desc">We offer financing on any plumbing/heating installation and home renovation
                       projects ranging from $2,000 to $100,000.</span> <br>
-                  <a href="https://www.financeit.ca/s/PBTFXw" class="cs-button-solid">Get Financing</a>
+                  <a target="_blank" href="https://www.financeit.ca/s/PBTFXw" class="cs-button-solid1">AVAIL</a>
               </li>
              
           </ul>
