--- a/src/content/pages/blog.html
+++ b/src/content/pages/blog.html
@@ -46,10 +46,10 @@ eleventyNavigation:
         <div class="cs-content">
             <picture class="cs-picture">
                 <!--Mobile Image-->
-                <source media="(max-width: 600px)" srcset="/assets/images/blog.jpg">
+                <source media="(max-width: 600px)" srcset="/assets/images/mpclogo1.png">
                 <!--Tablet and above Image-->
-                <source media="(min-width: 601px)" srcset="/assets/images/blog.jpg">
-                <img loading="lazy" decoding="async" src="/assets/images/blog.jpg" alt="busines meeting" width="413" height="652" aria-hidden="true">
+                <source media="(min-width: 601px)" srcset="/assets/images/mpclogo1.png">
+                <img loading="lazy" decoding="async" src="/assets/images/mpclogo1.png" alt="busines meeting" width="413" height="652" aria-hidden="true">
             </picture>
             <div class="cs-text-wrapper">
                 <span class="cs-topper">Our Blog</span>
